# UF2177actividad3/src/main/java/uf2177/actividad3/controladores/LibroApi.java
@@ -1,10 +1,10 @@
 package uf2177.actividad3.controladores;
 
+import java.util.logging.Level;
+import java.util.logging.Logger;
+
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
@@ -14,21 +14,16 @@ import uf2177.actividad3.repositorios.LibroDaoJdbcTemplate;
 @RestController
 @RequestMapping("/api/libros")
 public class LibroApi {
+	
+	private static final Logger LOGGER = Logger.getLogger(LibroApi.class.getName());
+	
 	@Autowired
 	private LibroDaoJdbcTemplate dao;
 
 	@GetMapping
 	public Iterable<Libro> get() {
+		LOGGER.log(Level.INFO, "GET: Lista de libros ");
 		return dao.obtenerTodos();
-	}
-	
-	@GetMapping("{id}/resenas")
-	public ResponseEntity<Libro> getPorId(@PathVariable long id) {
-		Libro libro = dao.obtenerPorIdConResenas(id);
-		if (libro == null) {
-			return new ResponseEntity<Libro>(HttpStatus.NOT_FOUND);
-		}
-		return new ResponseEntity<Libro>(libro, HttpStatus.OK);
 	}
 
 }
