# UF2177actividad3/src/main/java/uf2177/actividad3/controladores/ResenaApi.java
@@ -1,7 +1,12 @@
 package uf2177.actividad3.controladores;
 
+import java.util.logging.Level;
+import java.util.logging.Logger;
+
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
@@ -14,21 +19,24 @@ import uf2177.actividad3.repositorios.ResenaDaoJdbcTemplate;
 @RestController
 @RequestMapping("/api/resenas")
 public class ResenaApi {
+	
+	private static final Logger LOGGER = Logger.getLogger(LibroApi.class.getName());
+	
 	@Autowired
 	private ResenaDaoJdbcTemplate dao;
-
-	//@GetMapping("{id}")
-	//public ResponseEntity<Resena> getporId(@PathVariable long id) {
-	//	Resena resena = dao.obtenerPorId(id);
-	//	if (resena == null) {
-	//		return new ResponseEntity<Resena>(HttpStatus.NOT_FOUND);
-	//	}
-	//	return new ResponseEntity<Resena>(resena, HttpStatus.OK);
-	//}
+	
+	@GetMapping("{id}")
+	public Iterable<Resena> get(@PathVariable int id) {
+		LOGGER.log(Level.INFO, "GET: " + id + "resenas");
+		Iterable<Resena> resenas = dao.obtenerResenaPorId(id);
+		
+		return resenas;
+	}
 	
 	@PostMapping
 	@ResponseStatus(code = HttpStatus.CREATED)
 	public Resena post(@RequestBody Resena resena) {
+		LOGGER.log(Level.INFO, "POST: Insertar resena " + resena.toString());
 		return dao.insertar(resena);
 	}
 }
